# g7auto

./: .gitignore  README.md  g7auto.spec  pyproject.toml
g7auto/: g7ui.py
tests/: test_g7auto.py
